# regression_pipeline

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements.txt
archive/: augmenting.py  config.py  rom.py  utils.py
archive/out_of_scope/: 0 - data import.ipynb  00_eval_qb.ipynb  0_run_experiments.ipynb  1 - preprocessing_per_country.ipynb  1_eval_experiments.ipynb  rom_demo.ipynb
conf/base/: catalog.yml  globals.yml  parameters_inference.yml  parameters_modelling.yml  parameters_preprocessing.yml  parameters_reporting.yml
conf/base/parameters/colombia/: parameters_inference.yml  parameters_modelling.yml  parameters_preprocessing.yml  parameters_reporting.yml  parameters_simulation.yml
conf/base/parameters/czech_republic/: parameters_inference.yml  parameters_modelling.yml  parameters_preprocessing.yml  parameters_reporting.yml  parameters_simulation.yml
notebooks/: 01_check_data.ipynb  01_eda.ipynb
src/pricing/: __init__.py  __main__.py  eda.py  pipeline_registry.py  settings.py  utils.py
src/pricing/pipelines/feature_engineering/: nodes.py  pipeline.py
src/pricing/pipelines/inference/: __init__.py  nodes.py  pipeline.py
src/pricing/pipelines/modelling/: __init__.py  nodes.py  pipeline.py
src/pricing/pipelines/preprocessing/: nodes.py  pipeline.py
src/pricing/pipelines/reporting/: __init__.py  nodes.py  pipeline.py
src/pricing/pipelines/simulation/: __init__.py  nodes.py  pipeline.py
tests/pipelines/inference/: test_pipeline.py
tests/pipelines/modelling/: test_pipeline.py
tests/pipelines/reporting/: test_pipeline.py
tests/pipelines/simulation/: test_pipeline.py
