[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pricing = "pricing.__main__:main"

[tool.kedro]
package_name = "pricing"
project_name = "pricing"
kedro_init_version = "0.19.11"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "pricing.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[project]
name = "pricing"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dython>=0.7.9",
    "ipykernel>=6.29.5",
    "ipython~=8.31.0",
    "kedro-datasets[pandas-csvdataset,pandas-parquetdataset,tracking-metricsdataset]>=6.0.0",
    "kedro-viz>=10.1.0",
    "kedro>=0.19.11",
    "lightgbm>=4.5.0",
    "numpy~=1.23.5",
    "openpyxl>=3.1.5",
    "optuna~=4.2.0",
    "pandas~=1.5.3",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
    "scikit-learn~=1.3.0",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "shap>=0.46.0",
    "skore>=0.6.1",
    "tqdm~=4.67.1",
    "xgboost~=2.1.3",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "archive"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
exclude = ["*.ipynb"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
exclude = ["*.ipynb"]

[tool.kedro_telemetry]
project_id = "2789cc72654649d7a02fc9a4bfda9fce"
